AM_CPPFLAGS = ${CATCH2_CFLAGS} -I../include

check_PROGRAMS = test_Manager test_System test_Entity

test_Manager_SOURCES = test_Manager.cpp
test_Manager_LDADD = ../src/libecs-cpp.la

test_System_SOURCES = test_System.cpp
test_System_LDADD = ../src/libecs-cpp.la

test_Entity_SOURCES = test_Entity.cpp
test_Entity_LDADD = ../src/libecs-cpp.la
